--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ testem.log
 .DS_Store
 Thumbs.db
 .firebase/hosting.ZGlzdFxkaXNjb3JkLWFwcA.cache
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
